# haskell-conway

./: .gitignore  README.md  haskell-conway.cabal
src/: Conway.hs  Graphics.hs  Main.hs
