name:                haskell-conway
version:             0.1.0.0
synopsis:            Conway's Game of Life in Haskell (SDL2)
description:         Please see README.md
homepage:            https://github.com/Rydgel/haskell-conway#readme
license:             BSD3
license-file:        LICENSE
author:              Jérôme Mahuet
maintainer:          jerome.mahuet@gmail.com
copyright:           2016 Jérôme Mahuet
category:            Game
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable haskell-conway
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O3 -Wall
  other-modules:       Conway
                     , Graphics
  build-depends:       base
                     , array
                     , repa
                     , repa-algorithms
                     , sdl2
                     , random
                     , linear
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Rydgel/haskell-conway
